JPERF-408 Set GC params based on Java version